--- a/2023/colab/04_01_kontrollstrukturen.ipynb
+++ b/2023/colab/04_01_kontrollstrukturen.ipynb
@@ -1,26 +1,11 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyO5/iuDksRxxZqINctL0a7K",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/softwareengel/FOM_EDU/blob/main/2023/colab/04_01_kontrollstrukturen.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -72,7 +57,7 @@
         "l3 = [] # Leere Liste \n",
         "\n",
         "''' Mehrzeiliger Kommentar \n",
-        "= Mehrzeilige Zeichenkette , wenn eine Variable zugewiesen '''\n",
+        "= Mehrzeilige Zeichenkette , wenn einer Variablen zugewiesen '''\n",
         "\n",
         "print (\"Anzahl Elemente in l2 vom Typ Liste: \", len (l2))\n",
         "for wert in l: # Zählscheife\n",
@@ -100,5 +85,21 @@
         "    a = input (\"Eingabe: \")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyO5/iuDksRxxZqINctL0a7K",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
